@@ -1,5 +1,13 @@
 2004-11-18  Paolo Carlini  <pcarlini@suse.de>
 
+	* testsuite/26_numerics/numeric/sum_diff.cc: Use VERIFY.
+	* testsuite/ext/array_allocator/1.cc: Likewise.
+	* testsuite/ext/array_allocator/2.cc: Likewise.
+	* testsuite/ext/array_allocator/3.cc: Likewise.
+	* testsuite/ext/enc_filebuf/char/13598.cc: Likewise.
+
+2004-11-18  Paolo Carlini  <pcarlini@suse.de>
+
 	* include/bits/locale_facets.tcc (num_get<>::do_get(void*&)):
 	If the failbit is set, don't set it again.
 	(money_get<>::_M_extract): Minor stylistic tweak: consistently
